--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@ html, body{
 	justify-content: center;
 	height: 100vh;
 	width: 100%;
+	font-size: 50px;
+	background-color: #fff;
+    z-index: 10;
 }
 
 
