--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,41 @@
+/*
+ *	Soyma Stas
+ *	
+ *	Description: this si web portfolio;
+ *	Author: DRM;
+ */
+@font-face {
+	font-family: 'Open Sans'; 
+	src: url(../font/opensanslight.ttf); 
+	font-weight: 300;
+}
+@font-face {
+	font-family: 'Open Sans'; 
+	src: url(../font/opensanssemibold.ttf); 
+	font-weight: 600;
+}
+
 html, body{
+	font-family: 'Open Sans' !important;
 	margin: 0;
+}
+header{
+	position: absolute;
+	width: 100%;
+	height: 74px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.logo{
+	margin-left: 50px;
+}
+.social{
+	display: flex;
+	margin-right: 50px;
+}
+.social .sSoc{
+	margin: 0 18px;
 }
 .preloader{
 	position: absolute;
@@ -8,14 +44,65 @@ html, body{
 	justify-content: center;
 	height: 100vh;
 	width: 100%;
-	font-size: 50px;
 	background-color: #fff;
     z-index: 10;
 }
+.preloader .text{
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 600;
+	line-height: normal;
+	font-size: 72px;
+	color: #D8D8D8;
+}
+.nav{
+	position: absolute;
+	right: 40px;
+    bottom: 16%;
+}
+.nav ul{
+	display: flex;
+    padding: 0;
+}
+.nav li{
+	text-transform: uppercase;
+	font-weight: 600;
+	font-size: 18px;
+	color: #C4C4C4;
+	padding: 8px 12px; 
+	margin: 0 18px;
+    list-style-type: none;
+    cursor: pointer;
+}
+.nav li.active{
+	color: #1E1E1E;
+}
+.temp{
+	position: absolute;
+	left: 40px;
+    bottom: 16%;
+	font-weight: 600;
+	font-size: 72px;
+	color: #1E1E1E;
+  	animation: reveal 2s forwards;
+  	animation-delay: 3.7s;
+}
 
+@keyframes reveal {
+  from {
+    clip-path: inset(0 100% 0 0);
+  }
+  to {
+    clip-path: inset(0 0 0 0);
+  }
+}
 
 .owl-carousel .item {
     height: 10rem;
     background: #4DC7A0;
     padding: 1rem;
+}
+
+.d-none{
+	display: none !important;
 }
